updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I have worked in education for the last twenty years, from preschool to 12th grade, as a substitute, an instructional assistant, teacher, digital learning coach and currently in my new role. For my new role in the district, I will be maintaining our district website, and also setting up any audio/visula events. I am exctied for this change in my career! </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am from Southeast New Mexico. I have lived here all my life and it is nice place to live.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>The nerd in me is going to be revealed. I like being out and nature and finding pretty rocks to throw in my tumbler. I also like hiking, mountain biking and swimming. Rarely, when the weather is cold here, I stay inside and play on my computer.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>It seems that I make small changes in my career every few years. Yet, I have worked in an education setting nearly all my working years. I'm slowly finding out what my dream job is through these little changes. Perhaps I will know soon.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live a small town in the desert. It is all I have ever known.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>The last few years while working as a digital learning coach, I was able to teach coding to students during computer science week. I became interested so I started learning for fun. I thought if I ever decide not to be digtal learning coach, I would want to be a web developer. I didn't actively pursue it, but the opportunity came up one day and I was offered the position. I can't wait to learn all that I can!</p>
     </section>
 
     <footer id="footer">
