--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Where I'm From</h1>
       <p>I am from Southeast New Mexico. I have lived here all my life and it is nice place to live.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>The nerd in me is going to be revealed. I like being out and nature and finding pretty rocks to throw in my tumbler. I also like hiking, mountain biking and swimming. Rarely, when the weather is cold here, I stay inside and play on my computer.</p>
+      <p>The nerd in me is going to be revealed. I like being out in nature and finding pretty rocks to throw in my tumbler. I also like hiking, mountain biking and swimming. Rarely, when the weather is cold here, I stay inside and play on my computer.</p>
       <h1>What's your dream job?</h1>
       <p>It seems that I make small changes in my career every few years. Yet, I have worked in an education setting nearly all my working years. I'm slowly finding out what my dream job is through these little changes. Perhaps I will know soon.</p>
       <h1>Where do you live?</h1>
