corrected spelling errors

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I have worked in education for the last twenty years, from preschool to 12th grade, as a substitute, an instructional assistant, teacher, digital learning coach and currently in my new role. For my new role in the district, I will be maintaining our district website, and also setting up any audio/visula events. I am exctied for this change in my career! </p>
+      <p>I have worked in education for the last twenty years, from preschool to 12th grade, as a substitute, an instructional assistant, teacher, digital learning coach and my current new role. For my new role in the district, I will be maintaining our district website, and also setting up any audio/visual events. I am exctied for this change in my career! </p>
       <h1>Where I'm From</h1>
       <p>I am from Southeast New Mexico. I have lived here all my life and it is nice place to live.</p>
       <h1>What are your favorite hobbies?</h1>
